# simple-allocator

./: CMakeLists.txt  LICENSE  README.md  main.c
include/: error_handling.h  memlib.h  mm.h
src/: memlib.c  mm.c
